--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main] 
+    branches: [main]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -15,8 +16,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install, build, and upload
-        uses: withastro/action@v3 
+      - name: Install, build, and upload with Astro
+        uses: withastro/action@v3
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
