--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.0",
+    "@tailwindcss/vite": "^4.1.18",
     "gsap": "^3.14.1",
     "micromodal": "^0.4.10",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.1.18",
     "tiny-invariant": "^1.3.3"
   }
 }
