--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "clean": "rimraf dist .astro node_modules"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.2",
     "@iconify-json/fa-brands": "^1.2.0",
     "@iconify-json/mdi": "^1.2.1",
     "@types/micromodal": "^0.3.5",
@@ -27,9 +26,11 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "gsap": "^3.14.1",
     "micromodal": "^0.4.10",
+    "postcss": "^8.5.6",
     "sharp": "^0.33.5",
     "tailwindcss": "^4.1.18",
     "tiny-invariant": "^1.3.3"
